# Secure-Vault-System

./: .env.example  .gitignore  DEMO_GUIDE.md  Dockerfile  QUICK_FIX_GUIDE.md  README.md  SETUP_NODEJS.md  alembic.ini  check_tables.py  create_tables.py  dev.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml  run_server.bat  run_server.py  seed.py  server.js  test_direct.py  test_final.py  test_login.py  test_login_minimal.py
alembic/: env.py
alembic/versions/: 27651a85638f_add_envelope_encryption_fields.py  2aa29330b122_add_refresh_tokens_table.py  afb7159da886_initial_schema.py
app/: main.py  main_minimal.py
app/api/v1/: audit.py  auth.py  policies.py  roles.py  secrets.py  users.py
app/core/: config.py  permissions.py  security.py
app/db/: session.py
app/models/: __init__.py  audit.py  policy.py  refresh_token.py  role.py  role_policy.py  secret.py  user.py  user_role.py
app/schemas/: audit.py  auth.py  policy.py  role.py  secret.py  user.py
app/services/: audit_service.py  auth_service.py  policy_service.py  secret_service.py
db/: connection.js  schema.sql
middleware/: authenticate.js  authorize.js  security.js
public/: index.html
public/css/: styles.css
public/js/: app.js
routes/: audit.js  auth.js  policies.js  secrets.js
scripts/: setupDatabase.js
services/: auditService.js  authService.js  encryptionService.js  policyEngine.js  secretService.js
static/: index.html
static/css/: styles.css
static/js/: api.js  app.js  auth.js  ui.js
tests/: conftest.py  test_auth.py  test_secrets.py
